--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
         <link href="css/style.css" rel="stylesheet" />
         <!-- CSS Style Link -->
     </head>
+
     <body>
-        <!-- HTML Follows BEM naming conventions 
-    IDs are only used for sections to connect menu achors to sections -->
         <header class="page__header">
             <nav class="navbar__menu">
                 <!-- Navigation starts as empty UL that will be populated with JS -->
@@ -27,19 +26,17 @@
             </nav>
         </header>
         <main>
-            <header class="main__hero">
+            <header class="main__head">
                 <h1>Landing Page</h1>
             </header>
-            <!-- Each Section has an ID (used for the anchor) and 
-    a data attribute that will populate the li node.
-    Adding more sections will automatically populate nav.
+            <!-- 
     The first section is set to active class by default -->
             <section
                 id="section1"
                 data-nav="Section 1"
-                class="your-active-class"
+                class="active-class"
             >
-                <div class="landing__container">
+                <div class="land__container">
                     <h2>Section 1</h2>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -70,7 +67,7 @@
             </section>
 
             <section id="section2" data-nav="Section 2">
-                <div class="landing__container">
+                <div class="land__container">
                     <h2>Section 2</h2>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -101,7 +98,7 @@
             </section>
 
             <section id="section3" data-nav="Section 3">
-                <div class="landing__container">
+                <div class="land__container">
                     <h2>Section 3</h2>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -132,7 +129,7 @@
             </section>
 
             <section id="section4" data-nav="Section 4">
-                <div class="landing__container">
+                <div class="land__container">
                     <h2>Section 4</h2>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -163,7 +160,7 @@
             </section>
 
             <section id="section5" data-nav="Section 5">
-                <div class="landing__container">
+                <div class="land__container">
                     <h2>Section 5</h2>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -194,7 +191,7 @@
             </section>
 
             <section id="section6" data-nav="Section 6">
-                <div class="landing__container">
+                <div class="land__container">
                     <h2>Section 6</h2>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -225,9 +222,11 @@
             </section>
         </main>
         <footer class="page__footer"  style="text-align: center;">
-            <p>&copy Udacity</p><span><a href="https://www.youtube.com/c/Udacity"><i style="font-size=50px" class="fa fa-youtube"></i></span>
+            <p>&copy Udacity</p><span><a href="https://www.youtube.com/c/Udacity"><i style="font-size:50px" class="fa fa-youtube"></i></span>
         </footer>
         <script src="js/app.js"></script>
         <!-- JavaScript file link  -->
-        </body>
-        </html>
+
+        
+    </body>
+</html>
