--- a/index.html
+++ b/index.html
@@ -228,3 +228,5 @@
             <p>&copy Udacity</p><span><a href="https://www.youtube.com/c/Udacity"> visit our channel<i style="font-size:50px" class="fa fa-youtube"></i></span>
         </footer>
         <script src="js/app.js"></script>
+            </body>
+        </html>
